target/generated-sources/HelloParser.java
// Generated from Hello.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HelloParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NUM=1, OP=2, OPENP=3, CLOSEP=4, OPENB=5, CLOSEB=6, ALL=7, IN=8, OUT=9, 
		STRING=10, ENDL=11, DELIMITER=12, EQS=13, SEP=14, PSS=15, PPS=16, OPENXP=17, 
		CLOSEXP=18, WS=19;
	public static final int
		RULE_ops = 0, RULE_start = 1, RULE_input = 2, RULE_output = 3, RULE_exp = 4, 
		RULE_exp1 = 5, RULE_braexp = 6, RULE_psel = 7;
	public static final String[] ruleNames = {
		"ops", "start", "input", "output", "exp", "exp1", "braexp", "psel"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'('", "')'", "'['", "']'", "'*'", "'in'", "'out'", 
		null, "';'", "'''", "'='", null, null, null, "'$(\"'", "'\")'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NUM", "OP", "OPENP", "CLOSEP", "OPENB", "CLOSEB", "ALL", "IN", 
		"OUT", "STRING", "ENDL", "DELIMITER", "EQS", "SEP", "PSS", "PPS", "OPENXP", 
		"CLOSEXP", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Hello.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HelloParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class OpsContext extends ParserRuleContext {
		public TerminalNode OP() { return getToken(HelloParser.OP, 0); }
		public TerminalNode EQS() { return getToken(HelloParser.EQS, 0); }
		public OpsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ops; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterOps(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitOps(this);
		}
	}

	public final OpsContext ops() throws RecognitionException {
		OpsContext _localctx = new OpsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ops);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16);
			_la = _input.LA(1);
			if ( !(_la==OP || _la==EQS) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public OutputContext output() {
			return getRuleContext(OutputContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode EOF() { return getToken(HelloParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(18);
			input();
			setState(19);
			output();
			setState(20);
			exp();
			setState(21);
			match(EOF);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputContext extends ParserRuleContext {
		public String v;
		public Token STRING;
		public TerminalNode IN() { return getToken(HelloParser.IN, 0); }
		public TerminalNode STRING() { return getToken(HelloParser.STRING, 0); }
		public TerminalNode ENDL() { return getToken(HelloParser.ENDL, 0); }
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitInput(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_input);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			match(IN);
			setState(25);
			((InputContext)_localctx).STRING = match(STRING);
			setState(26);
			match(ENDL);
			((InputContext)_localctx).v = (((InputContext)_localctx).STRING!=null?((InputContext)_localctx).STRING.getText():null);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputContext extends ParserRuleContext {
		public String s;
		public Token STRING;
		public TerminalNode OUT() { return getToken(HelloParser.OUT, 0); }
		public TerminalNode STRING() { return getToken(HelloParser.STRING, 0); }
		public TerminalNode ENDL() { return getToken(HelloParser.ENDL, 0); }
		public OutputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterOutput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitOutput(this);
		}
	}

	public final OutputContext output() throws RecognitionException {
		OutputContext _localctx = new OutputContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_output);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			match(OUT);
			setState(30);
			((OutputContext)_localctx).STRING = match(STRING);
			setState(31);
			match(ENDL);
			((OutputContext)_localctx).s = (((OutputContext)_localctx).STRING!=null?((OutputContext)_localctx).STRING.getText():null);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public Token ter;
		public ExpContext prev;
		public TerminalNode EQS() { return getToken(HelloParser.EQS, 0); }
		public TerminalNode OPENXP() { return getToken(HelloParser.OPENXP, 0); }
		public Exp1Context exp1() {
			return getRuleContext(Exp1Context.class,0);
		}
		public TerminalNode CLOSEXP() { return getToken(HelloParser.CLOSEXP, 0); }
		public TerminalNode ENDL() { return getToken(HelloParser.ENDL, 0); }
		public TerminalNode STRING() { return getToken(HelloParser.STRING, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExp(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		ExpContext _localctx = new ExpContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_exp);
		try {
			setState(49);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				((ExpContext)_localctx).ter = match(STRING);
				setState(35);
				match(EQS);
				setState(36);
				match(OPENXP);
				setState(37);
				exp1();
				setState(38);
				match(CLOSEXP);
				setState(39);
				match(ENDL);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				((ExpContext)_localctx).ter = match(STRING);
				setState(42);
				match(EQS);
				setState(43);
				match(OPENXP);
				setState(44);
				exp1();
				setState(45);
				match(CLOSEXP);
				setState(46);
				match(ENDL);
				setState(47);
				((ExpContext)_localctx).prev = exp();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exp1Context extends ParserRuleContext {
		public String v;
		public Token ter;
		public TerminalNode ALL() { return getToken(HelloParser.ALL, 0); }
		public TerminalNode STRING() { return getToken(HelloParser.STRING, 0); }
		public PselContext psel() {
			return getRuleContext(PselContext.class,0);
		}
		public BraexpContext braexp() {
			return getRuleContext(BraexpContext.class,0);
		}
		public TerminalNode SEP() { return getToken(HelloParser.SEP, 0); }
		public Exp1Context exp1() {
			return getRuleContext(Exp1Context.class,0);
		}
		public Exp1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExp1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExp1(this);
		}
	}

	public final Exp1Context exp1() throws RecognitionException {
		Exp1Context _localctx = new Exp1Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_exp1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			switch (_input.LA(1)) {
			case ALL:
				{
				setState(51);
				match(ALL);
				}
				break;
			case STRING:
				{
				setState(52);
				((Exp1Context)_localctx).ter = match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(57);
			switch (_input.LA(1)) {
			case PSS:
			case PPS:
				{
				setState(55);
				psel();
				}
				break;
			case OPENB:
				{
				setState(56);
				braexp();
				}
				break;
			case ALL:
			case STRING:
			case SEP:
			case CLOSEXP:
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(60);
			_la = _input.LA(1);
			if (_la==SEP) {
				{
				setState(59);
				match(SEP);
				}
			}

			setState(63);
			_la = _input.LA(1);
			if (_la==ALL || _la==STRING) {
				{
				setState(62);
				exp1();
				}
			}

			((Exp1Context)_localctx).v = (((Exp1Context)_localctx).ter!=null?((Exp1Context)_localctx).ter.getText():null);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BraexpContext extends ParserRuleContext {
		public TerminalNode OPENB() { return getToken(HelloParser.OPENB, 0); }
		public List<TerminalNode> STRING() { return getTokens(HelloParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(HelloParser.STRING, i);
		}
		public OpsContext ops() {
			return getRuleContext(OpsContext.class,0);
		}
		public List<TerminalNode> DELIMITER() { return getTokens(HelloParser.DELIMITER); }
		public TerminalNode DELIMITER(int i) {
			return getToken(HelloParser.DELIMITER, i);
		}
		public TerminalNode CLOSEB() { return getToken(HelloParser.CLOSEB, 0); }
		public PselContext psel() {
			return getRuleContext(PselContext.class,0);
		}
		public BraexpContext braexp() {
			return getRuleContext(BraexpContext.class,0);
		}
		public BraexpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_braexp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterBraexp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitBraexp(this);
		}
	}

	public final BraexpContext braexp() throws RecognitionException {
		BraexpContext _localctx = new BraexpContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_braexp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(OPENB);
			setState(68);
			match(STRING);
			setState(69);
			ops();
			setState(70);
			match(DELIMITER);
			setState(71);
			match(STRING);
			setState(72);
			match(DELIMITER);
			setState(73);
			match(CLOSEB);
			setState(76);
			switch (_input.LA(1)) {
			case PSS:
			case PPS:
				{
				setState(74);
				psel();
				}
				break;
			case OPENB:
				{
				setState(75);
				braexp();
				}
				break;
			case ALL:
			case STRING:
			case SEP:
			case CLOSEXP:
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PselContext extends ParserRuleContext {
		public TerminalNode PSS() { return getToken(HelloParser.PSS, 0); }
		public PselContext psel() {
			return getRuleContext(PselContext.class,0);
		}
		public BraexpContext braexp() {
			return getRuleContext(BraexpContext.class,0);
		}
		public TerminalNode PPS() { return getToken(HelloParser.PPS, 0); }
		public TerminalNode OPENP() { return getToken(HelloParser.OPENP, 0); }
		public TerminalNode STRING() { return getToken(HelloParser.STRING, 0); }
		public TerminalNode CLOSEP() { return getToken(HelloParser.CLOSEP, 0); }
		public PselContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_psel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterPsel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitPsel(this);
		}
	}

	public final PselContext psel() throws RecognitionException {
		PselContext _localctx = new PselContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_psel);
		try {
			setState(91);
			switch (_input.LA(1)) {
			case PSS:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				match(PSS);
				setState(81);
				switch (_input.LA(1)) {
				case PSS:
				case PPS:
					{
					setState(79);
					psel();
					}
					break;
				case OPENB:
					{
					setState(80);
					braexp();
					}
					break;
				case ALL:
				case STRING:
				case SEP:
				case CLOSEXP:
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case PPS:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				match(PPS);
				setState(84);
				match(OPENP);
				setState(85);
				match(STRING);
				setState(86);
				match(CLOSEP);
				setState(89);
				switch (_input.LA(1)) {
				case PSS:
				case PPS:
					{
					setState(87);
					psel();
					}
					break;
				case OPENB:
					{
					setState(88);
					braexp();
					}
					break;
				case ALL:
				case STRING:
				case SEP:
				case CLOSEXP:
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}